--- a/index.html
+++ b/index.html
@@ -9,30 +9,36 @@
 </head>
 <body>
     <header>
+        <!-- sezione iniziale -->
         <section class="bordo">
          <div class="contenitore">
             <div class="logo "><img src="./img/logo.svg" alt=""></div>
             <nav class="link">
                 <ul>
-                    <li><a href="#">link</a></li>
-                    <li><a href="#">link</a></li>
-                    <li><a href="#">link</a></li>
-                    <li><a href="#">link</a></li>
-                    <li><a href="#">link</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
                 </ul>
             </nav>
             <div class="login">
-                    <div>login</div>
+                    <div> <button class="bottone colorebotb font acc">Accedi</button> </div>
             </div>
          </div>
         </section>
+        <!-- testo iniziale -->
         <section class="blu">
             <div class="striscia1">
-
+                <h1 class="titolo-iniziale">Il tuo posto per parlare</h1>
+                <p class="ps1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aperiam, iusto consequatur nulla et laborum itaque animi eveniet officiis repellendus nobis sequi deserunt illum excepturi facere? Eveniet aspernatur aliquam quo.</p>
+                <button class="bottone colorebotb font-bs1">Scarica per Mac</button>
+                <button class="bottone font-bs1 colorebotn">Apri Discord nel tuo browser</button>
             </div>
         </section>
     </header>
     <main>
+        <!-- inizio sezioni -->
         <section class="bianco">
             <div class="striscia">
                 <div class="st-1"></div>
