--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="striscia1">
                 <h1 class="titolo-iniziale">Il tuo posto per parlare</h1>
                 <p class="ps1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aperiam, iusto consequatur nulla et laborum itaque animi eveniet officiis repellendus nobis sequi deserunt illum excepturi facere? Eveniet aspernatur aliquam quo.</p>
-                <button class="bottone colorebotb font-bs1">Scarica per Mac</button>
+                <button class="bottone colorebotb font-bs1">↓ Scarica per Mac</button>
                 <button class="bottone font-bs1 colorebotn">Apri Discord nel tuo browser</button>
             </div>
         </section>
@@ -41,24 +41,46 @@
         <!-- inizio sezioni -->
         <section class="bianco">
             <div class="striscia">
-                <div class="st-1"></div>
-                <div class="st-2"></div>
+                <div class="st-1">
+                    <img src="./img/item1.svg" alt="">
+                </div>
+                <div class="st-2">
+                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
+                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                </div>
             </div>
         </section>
         <section class="grigio">
             <div class="striscia">
-                <div class="st-2"></div>
-                <div class="st-1"></div>
+                <div class="st-2">
+                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
+                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                </div>
+                <div class="st-1">
+                    <img src="./img/item2.svg" alt="">
+                    
+                </div>
             </div>
         </section>
         <section class="bianco">
             <div class="striscia">
-                <div class="st-1"></div>
-                <div class="st-2"></div>
+                <div class="st-1">
+                    <img src="./img/item3.svg" alt="">
+                </div>
+                <div class="st-2">
+                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
+                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                </div>
             </div>
         </section>
         <section class="grigio">
-            <div class="striscia5"></div>
+            <div class="striscia5">
+                <h1 class="titolo-st-finale">Tecnologia affidabile per tenersi in contatto</h1>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</p>
+                <img src="./img/item4-big.svg" alt="">
+                <h2>Pronto a iniziare la tua avventura?</h2>
+                <button class="bottone font-bs1 colorebotblu">↓ Scarica per Mac</button>
+            </div>
         </section>
     </main>
     <footer>
