--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=ù, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -15,11 +17,11 @@
             <div class="logo "><img src="./img/logo.svg" alt=""></div>
             <nav class="link">
                 <ul>
-                    <li><a href="#">Scarica</a></li>
-                    <li><a href="#">Perchè Discord</a></li>
-                    <li><a href="#">Nitro</a></li>
-                    <li><a href="#">Sicurezza</a></li>
-                    <li><a href="#">Assistenza</a></li>
+                    <li class="lista"><a href="#">Scarica</a></li>
+                    <li class="lista"><a href="#">Perchè Discord</a></li>
+                    <li class="lista"><a href="#">Nitro</a></li>
+                    <li class="lista"><a href="#">Sicurezza</a></li>
+                    <li class="lista"><a href="#">Assistenza</a></li>
                 </ul>
             </nav>
             <div class="login">
@@ -31,7 +33,7 @@
         <section class="blu">
             <div class="striscia1">
                 <h1 class="titolo-iniziale">Il tuo posto per parlare</h1>
-                <p class="ps1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aperiam, iusto consequatur nulla et laborum itaque animi eveniet officiis repellendus nobis sequi deserunt illum excepturi facere? Eveniet aspernatur aliquam quo.</p>
+                <p class="ps1">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                 <button class="bottone colorebotb font-bs1">↓ Scarica per Mac</button>
                 <button class="bottone font-bs1 colorebotn">Apri Discord nel tuo browser</button>
             </div>
@@ -45,16 +47,16 @@
                     <img src="./img/item1.svg" alt="">
                 </div>
                 <div class="st-2">
-                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
-                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                    <h1 class="titolo-sez1">Un luogo a invito con tutto lo spazio necessario per parlare </h1>
+                    <p class="ps2">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giomnata senza intasare una chat di gruppo.</p>
                 </div>
             </div>
         </section>
         <section class="grigio">
             <div class="striscia">
                 <div class="st-2">
-                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
-                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                    <h1 class="titolo-sez1">Dove trovarsi é facile</h1>
+                    <p class="ps2">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div class="st-1">
                     <img src="./img/item2.svg" alt="">
@@ -68,8 +70,8 @@
                     <img src="./img/item3.svg" alt="">
                 </div>
                 <div class="st-2">
-                    <h1 class="titolo-sez1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro adipisci, </h1>
-                    <p class="ps2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus deserunt, recusandae dicta, consequuntur excepturi odit ad officiis natus blanditiis facere, odio vitae </p>
+                    <h1 class="titolo-sez1">Da pochi a un fandom</h1>
+                    <p class="ps2">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div>
             </div>
         </section>
@@ -78,28 +80,73 @@
                 <h1 class="titolo-st-finale">Tecnologia affidabile per tenersi in contatto</h1>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</p>
                 <img src="./img/item4-big.svg" alt="">
-                <h2>Pronto a iniziare la tua avventura?</h2>
+                <h2 class="frase-finale">Pronto a iniziare la tua avventura?</h2>
                 <button class="bottone font-bs1 colorebotblu">↓ Scarica per Mac</button>
             </div>
         </section>
     </main>
+    <!-- l'inizio della fine -->
     <footer>
         <section class="nero">
             <div class="box"> 
-            <div class="st6-1"></div>
+            <div class="st6-1">
+                <h2 class="fine-pag">Il tuo posto per parlare</h2>
+                <span class="italia"><img src="./img/ita.png" alt="" class="ita"> Italiano ⮟</span>
+                <div><i class="fa-brands fa-twitter loghi"></i> <i class="fa-brands fa-instagram loghi"></i> <i class="fa-brands fa-facebook loghi"></i> <i class="fa-brands fa-youtube loghi"></i></div>
+            </div>
             <div class="st6-2">
-                <div class="st-q"></div>
-                <div class="st-q"></div>
-                <div class="st-q"></div>
-                <div class="st-q"></div>
+                <div class="st-q">
+                    <ul>
+                        <li class="fine-pag">Prodotto</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="st-q">
+                    <ul>
+                        <li class="fine-pag">Compagnia</li>
+                        <li>Chi siamo</li>
+                        <li>Lovora con noi</li>
+                        <li>Marchio</li>
+                        <li>Redaziopni</li>
+                        <li>negozio</li>
+                    </ul>
+                </div>
+                <div class="st-q">
+                    <ul>
+                        <li class="fine-pag">Risorse</li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                        <li>Scarica</li>
+                        <li>Perchè discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+                <div class="st-q">
+                    <ul>
+                    <li class="fine-pag">Norme</li>
+                    <li>Scarica</li>
+                    <li>Perchè discord</li>
+                    <li>Nitro</li>
+                     <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    </ul>
+                </div>
             </div>
             </div> 
         </section>
-        <hr>
         <section class="sfinale">
           <div class="fp">
-            <div class="fp1">logo</div>
-            <div class="fp2"><a href="#"><button>bottone</button></a></div>
+            <div class="fp1"><img src="./img/logo.svg" alt=""></div>
+            <div class="fp2"><a href="#"><button class="bottone font-bs1 colorebotblu">bottone</button></a></div>
           </div>
         </section>
     </footer>
